--- a/js/test.html
+++ b/js/test.html
@@ -13,13 +13,26 @@
 		pr(s);
 		document.body.appendChild(document.createElement("br"));
 	    }
+	    function profile(fun) {
+		console.profile();
+		fun();
+		console.profileEnd();
+	    }
+	    function run_prof() {
+		profile(function() {
+		     return sha256_digest(s); 
+		});
+		profile(function() {
+		    return (new UTIL.SHA256.Hash()).update(s).digest();
+		});
+	    }
 
 	    window.onload = function() {
 		prln("verify sha256 legacy: "+sha256_self_test());
 		prln("verify UTIL.SHA256: "+UTIL.SHA256.self_test());
 
 		pr("legacy sha256: ");
-		prln((s.length / UTIL.gauge(function () { 
+		prln((s.length / UTIL.gauge(function () {
 								 return sha256_digest(s); 
 							     }) / 1024).toFixed(2) + " kb/s");
 		pr("UTIL.SHA256: ");
@@ -27,6 +40,8 @@
 								return (new UTIL.SHA256.Hash()).update(s).digest();
 							     }) / 1024).toFixed(2) + " kb/s");
 	    };
+
+
 	</script>
     </head>
     <body>
