--- a/htdocs/testdb.html
+++ b/htdocs/testdb.html
@@ -5,7 +5,7 @@
 <script type="text/javascript" src="../js/ppp/mmp.js"></script>
 <script type="text/javascript" src="../js/ppp/meteor.js"></script>
 <script type="text/javascript" src="../js/ppp/serialization.js"></script>
-<script type="text/javascript" src="../js/sha256.js"></script>
+<script type="text/javascript" src="../js/util.sha256.js"></script>
 <script type="text/javascript" src="../js/SyncDB.js"></script>
 <script type="text/javascript" src="../js/SyncDB.Test.js"></script>
 <script type="text/javascript">
