--- a/htdocs/htmldb.html
+++ b/htdocs/htmldb.html
@@ -5,6 +5,8 @@
 <script type="text/javascript" src="../js/ppp/mmp.js"></script>
 <script type="text/javascript" src="../js/ppp/meteor.js"></script>
 <script type="text/javascript" src="../js/ppp/serialization.js"></script>
+<script type="text/javascript" src="../js/util.bloom.js"></script>
+<script type="text/javascript" src="../js/util.int.js"></script>
 <script type="text/javascript" src="../js/util.sha256.js"></script>
 <script type="text/javascript" src="../js/SyncDB.js"></script>
 <script type="text/javascript">
